# cpkit

./: .gitignore  CODEMAP.md  Makefile  README.md  __init__.py  pyproject.toml
cpkit/: README.md  __init__.py  admin.py  app.py  bundle.py  dependencies.py  repository.py  time.py
cpkit/audit/: README.md  __init__.py  events_service.py  recorder.py  repository.py  router.py  service.py  types.py
cpkit/auth/: README.md  __init__.py  api_key_router.py  api_key_service.py  api_keys.py  bundle.py  claims.py  config.py  dependencies.py  oidc.py  redirects.py  repositories.py  router.py  secrets.py  types.py
cpkit/cli/: README.md  __init__.py  __main__.py  base.py  migration.py  schema.py  server.py
cpkit/config/: README.md  __init__.py  env.py
cpkit/db/: README.md  __init__.py  postgres.py
cpkit/errors/: README.md  __init__.py  http.py  repository.py  service.py
cpkit/jobs/: README.md  __init__.py  maintenance.py  recurring.py  repository.py  router.py  service.py  types.py  worker.py
cpkit/logging/: README.md  __init__.py  context.py  (+2 more)
examples/todo_app/: README.md  pyproject.toml
examples/todo_app/resources/: ddl.sql
examples/todo_app/resources/playbooks/: EXPORT_TODOS.yaml  SSH_CREDENTIAL_CLEANUP.yaml  SSH_CREDENTIAL_PREPARE.yaml
examples/todo_app/todo_app/: __init__.py  api.py  main.py  models.py  repos.py  services.py  workers.py
examples/todo_app/webapp/: extension.css  extension.html  extension.js
resources/: README.md  ddl.sql  repository_maintenance_guide.md  webapp_extension_guide.md  webapp_extension_template.js
tests/: test_app_playbook_options.py  test_audit_repository.py  test_auth_dependencies.py  test_bundle_settings.py  test_cli_playbooks.py  test_jobs_repository.py  test_jobs_service.py  test_jobs_worker.py  test_playbooks_ansible.py
tools/: README.md  client.sh
(+21 files in other folders)
