[project]
name = "cpkit"
version = "0.1.0"
description = "Reusable control-plane framework extracted from cp."
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "psycopg (>=3.3.3,<4.0.0)",
    "psycopg-binary (>=3.3.3,<4.0.0)",
    "psycopg-pool (>=3.3.0,<4.0.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "cryptography (>=46.0.7,<47.0.0)",
    "PyJWT (>=2.10.1,<3.0.0)",
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "ansible-runner (>=2.4.3,<3.0.0)",
    "systemd-python (>=235,<236) ; sys_platform == \"linux\"",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [
    {path = "cpkit/resources/ddl.sql", format = ["sdist", "wheel"]},
    {path = "resources/*.md", format = ["sdist", "wheel"]},
    {path = "resources/webapp_extension_template.js", format = ["sdist", "wheel"]},
    {path = "cpkit/webapp", format = ["sdist", "wheel"]},
]

[tool.black]
target-version = ["py314"]

[tool.isort]
profile = "black"
